feat: implement core medical services, account management interfaces, and initial data seeding